--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -103,7 +103,20 @@
       width: 100%;
       box-sizing: border-box;
     }
-  
+
+      /* Smoothie Builder: stack content on mobile */
+  .main-content-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1.5rem;
+  }
+
+  .main-content-grid > .card {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
 
 
 
