Add responsive overrides stylesheet

--- a/templates/index.html
+++ b/templates/index.html
@@ -3592,6 +3592,7 @@
     })();
   </script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
 </head>
 <body>
   {% include "_navbar.html" %}
